@@ -55,13 +55,13 @@
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li><a style="font-size:15px; color: #ffffff;" href="/">&nbsp;&nbsp;&nbsp;&nbsp;Home</a></li>
-                    <li><a style="font-size:15px; color: #ffffff;" href="/armor-generator">&nbsp;&nbsp;&nbsp;&nbsp;Armor Generator</a></li>
-                    <li><a style="font-size:15px; color: #ffffff;" href="/weapon-generator">&nbsp;&nbsp;&nbsp;&nbsp;Weapon Generator</a></li>
-                    <li><a style="font-size:15px; color: #ffffff;" href="/system-generator">&nbsp;&nbsp;&nbsp;&nbsp;System Generator</a></li>
-                    <li><a style="font-size:15px; color: #ffffff;" href="/loot-generator">&nbsp;&nbsp;&nbsp;&nbsp;Loot Generator</a></li>
-                    <li><a style="font-size:15px; color: #ffffff;" href="/monster-builder">&nbsp;&nbsp;&nbsp;&nbsp;Monster Builder</a></li>
-                    <li><a style="font-size:15px; color: #ffffff;" href="/character-concept-generator">&nbsp;&nbsp;&nbsp;&nbsp;Character Concept<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Generator</a></li>
-                    <li><a style="font-size:15px; color: #ffffff;" href="/character-sheet">&nbsp;&nbsp;&nbsp;&nbsp;Character Sheet</a></li>
+                    <li><hr style="margin: 0 25px 0 25px; color: #ffffff;"><a style="font-size:15px; color: #ffffff;" href="/armor-generator">&nbsp;&nbsp;&nbsp;&nbsp;Armor Generator</a></li>
+                    <li><hr style="margin: 0 25px 0 25px; color: #ffffff;"><a style="font-size:15px; color: #ffffff;" href="/weapon-generator">&nbsp;&nbsp;&nbsp;&nbsp;Weapon Generator</a></li>
+                    <li><hr style="margin: 0 25px 0 25px; color: #ffffff;"><a style="font-size:15px; color: #ffffff;" href="/system-generator">&nbsp;&nbsp;&nbsp;&nbsp;System Generator</a></li>
+                    <li><hr style="margin: 0 25px 0 25px; color: #ffffff;"><a style="font-size:15px; color: #ffffff;" href="/loot-generator">&nbsp;&nbsp;&nbsp;&nbsp;Loot Generator</a></li>
+                    <li><hr style="margin: 0 25px 0 25px; color: #ffffff;"><a style="font-size:15px; color: #ffffff;" href="/monster-builder">&nbsp;&nbsp;&nbsp;&nbsp;Monster Builder</a></li>
+                    <li><hr style="margin: 0 25px 0 25px; color: #ffffff;"><a style="font-size:15px; color: #ffffff;" href="/character-concept-generator">&nbsp;&nbsp;&nbsp;&nbsp;Character Concept<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Generator</a></li>
+                    <li><hr style="margin: 0 25px 0 25px; color: #ffffff;"><a style="font-size:15px; color: #ffffff;" href="/character-sheet">&nbsp;&nbsp;&nbsp;&nbsp;Character Sheet</a></li>
                     <li><div class="nav-height-calc" style="position: relative; width:190px; margin:0 auto; margin-top: 30px;">
                       <button type="button" style="position: absolute; bottom: 20px;" class="btn btn-default btn-round btn-grn btn-block" onclick="location.href = 'https://www.paypal.me/mjcadz';">Buy creator a space beer</button>
                     </div></li>
