@@ -222,6 +222,10 @@
                                     <div id="armorGearDropdown"></div>
                                     <div id="weaponGearDropdown"></div>
                                     <div id="equipmentGearDropdown"></div>
+                                    <div class="form-group">
+                                        <label for="inputGear">Other gear</label>
+                                        <input type="text" class="form-control" id="inputGear" placeholder="Custom entries">
+                                    </div>
                                 </div>
                                 <div class="col-sm-6">
                                     <hr>
