@@ -2,14 +2,16 @@ V2.4
 New Features:
   - A character concept generator
   - monster builder add buttons to save statblock as image and print statblock
+  - monster builder fully integrate class selection
   - monster builder add gear selection
+  - monster builder generate attacks from weapons chosen in gear
   - changelog now displayed on site
   - added 'no credits' mode to loot gen
   - alien archive equipment added to loot generator
   - source selection added to loot generator
 Changes:
   - monster statblock format fixes (class, RP, racial spell-like abilities)
-  - switch loot gen to easier to maintain data
+  - switch loot gen to easier to maintain data model
 
 V2.3
 New Features:
